--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {},
   "dependencies": {
     "lodash": "^4.12.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "sendgrid": "^2.0.0"
   }
 }
